--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="public/css/style-contact.css">
 
+    <script src="https://kit.fontawesome.com/f9ac35827f.js" crossorigin="anonymous"></script>
+    <title>CONTACT</title>
+</head>
+<div class="base-container">
+    <nav>
+        <img src="public/img/logo_pantry.svg">
+        <ul>
+            <li>
+                <i class="fas fa-home"></i>
+                <a href="#" class="button">Home</a>
+            </li>
+            <li>
+                <i class="far fa-address-book"></i>
+                <a href="#" class="button">Contacts</a>
+            </li>
+            <li>
+                <i class="fas fa-info"></i>
+                <a href="#" class="button">Author</a>
+            </li>
+            <li>
+                <i class="fas fa-question"></i>
+                <a href="#" class="button">Help</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <header>
+            <div class="profile">
+                <i class="fas fa-user"></i>
+                Profile
+            </div>
+        </header>
+        <section class="projects">
+            <div class="contact">
+                <input class="name" name="name" type="text" placeholder="Your's name">
+                <input class="email" name="email" type="email" placeholder="Your's email@email.com">
+                <input class="subject" name="subject" type="text" placeholder="Subject">
+                <input class="message" name="message" type="text" placeholder="Your's message">
+            </div>
+            <div class="adress">
+                Jestem Pusty
+            </div>
+        </section>
+    </main>
+</div>
 </body>
 </html>
