Add new items in views Contact.

--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -17,14 +17,6 @@
                 <i class="far fa-address-book"></i>
                 <a href="#" class="button">Contacts</a>
             </li>
-            <li>
-                <i class="fas fa-info"></i>
-                <a href="#" class="button">Author</a>
-            </li>
-            <li>
-                <i class="fas fa-question"></i>
-                <a href="#" class="button">Help</a>
-            </li>
         </ul>
     </nav>
     <main>
@@ -39,10 +31,23 @@
                 <input class="name" name="name" type="text" placeholder="Your's name">
                 <input class="email" name="email" type="email" placeholder="Your's email@email.com">
                 <input class="subject" name="subject" type="text" placeholder="Subject">
-                <input class="message" name="message" type="text" placeholder="Your's message">
+                <div class="message">
+                    <textarea  name="message" type="text" placeholder="Your's message"></textarea>
+                </div>
+
+                <button>Send</button>
+
             </div>
-            <div class="adress">
-                Jestem Pusty
+            <div class="address-box">
+                <div class="address">
+
+                </div>
+                <div class="author-box">
+                    <div class="author">
+                        <img src="public/img/uploads/moje zdiecie.jpg">
+                        <p>Mam na imię Grzegorz Szydło</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
