--- a/public/css/style-contact.css
+++ b/public/css/style-contact.css
@@ -7,17 +7,6 @@ body {
     text-align: center;
 }
 
-button {
-    background: transparent linear-gradient(180deg, #3D8EF3 0%, #2251B9 100%) 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000029;
-    border-radius: 19px;
-    width: 50%;
-    border: none;
-    color: white;
-    margin: 1em;
-    line-height: 2.5em;
-}
-
 .base-container {
     display: flex;
     align-items: center;
@@ -51,6 +40,7 @@ header {
 section{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    height: 100%;
 }
 
 
@@ -123,13 +113,16 @@ li:last-child {
     justify-content: center;
     align-items: center;
 }
+.profile>i {
+    padding: 1em 1em;
+}
 
 .contact{
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 
 }
 .name{
@@ -151,10 +144,60 @@ li:last-child {
     border-radius: 30px;
 }
 .message{
-    display: flex;
     margin-top: 3em;
     width: 70%;
     height: 40vh;
+    border: 1px solid #FFFFFF;
     border-radius: 30px;
 
 }
+.message>textarea {
+    width: 100%;
+    height: 100%;
+    resize: vertical;
+    border: 1px solid #000000;
+}
+
+button {
+    margin-top: 3em;
+    background: transparent linear-gradient(180deg, #3D8EF3 0%, #2251B9 100%) 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 19px;
+    width: 50%;
+    border: none;
+    color: white;
+    line-height: 2.5em;
+}
+
+.address-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
+
+.address{
+    height: 50%;
+}
+.author-box{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+}
+
+.author{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 50%;
+    background-color: #3D8EF3;
+}
+.author>img{
+    border-radius: 30%;
+    margin: 0.5em;
+     width: 50%;
+     height: 90%;
+ }
