--- a/public/css/style-Registration.css
+++ b/public/css/style-Registration.css
@@ -77,3 +77,10 @@ input {
         margin: 2em;
     }
 }
+
+.no-valid{
+    border: 3px solid red;
+    border-radius: 1em;
+    box-shadow: 0 0 0.2em red;
+    outline: none;
+}
