--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -49,10 +49,8 @@ header {
 }
 
 section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2em;
-    padding: 2em;
+    display: flex;
+    flex-direction: row;
     overflow: auto;
 }
 
@@ -146,29 +144,22 @@ li:last-child {
     margin: 0;
     box-sizing: border-box;
 }
-
-
-.projects>div>img {
-    height: 50%;
+.section{
+    height: 100%;
     width: 100%;
-    object-fit: cover;
-    border-radius: 1em 1em 0 0;
+
+}
+.add-items{
+    width: 50%;
+    height: 100%;
+    /*background-color: red;*/
+
 }
 
-.projects>div>div {
-    height: 50%;
-    margin: 1em;
-    color: #2699FB;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+.list-items{
+    width: 50%;
+    height: 100%;
+   /*background-color: blue;*/
 }
 
-.projects>div {
-    border: 1px solid gray;
-    border-radius: 1em 1em 0 0;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+
