--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -106,7 +106,16 @@ li:last-child {
     width: 100%;
 }
 
-
+.name {
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 1.5em;
+    width: 10%;
+    margin-right: 1em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .log-out {
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -156,7 +165,7 @@ li:last-child {
 
 }
 
-.list-items{
+.recipe{
     width: 50%;
     height: 100%;
    /*background-color: blue;*/
