--- a/public/css/style-contact.css
+++ b/public/css/style-contact.css
@@ -98,7 +98,18 @@ li:last-child {
 
 
 
-.profile {
+.name {
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 1.5em;
+    width: 10%;
+    margin-right: 1em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.log-out {
     background: #FFFFFF 0% 0% no-repeat padding-box;
     opacity: 1;
     box-shadow: 0px 3px 6px #00000029;
@@ -113,7 +124,8 @@ li:last-child {
     justify-content: center;
     align-items: center;
 }
-.profile>i {
+
+.log-out>i {
     padding: 1em 1em;
 }
 
@@ -125,7 +137,7 @@ li:last-child {
     height: 100%;
 
 }
-.name{
+.name-input{
     margin-top: 3em;
     width: 70%;
     height: 5vh;
