--- a/public/css/style-add_item.css
+++ b/public/css/style-add_item.css
@@ -7,6 +7,17 @@ body {
     text-align: center;
 }
 
+button {
+    background: transparent linear-gradient(180deg, #3D8EF3 0%, #2251B9 100%) 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 19px;
+    width: 50%;
+    border: none;
+    color: white;
+    margin: 1em;
+    line-height: 2.5em;
+}
+
 .base-container {
     display: flex;
     align-items: center;
@@ -37,12 +48,11 @@ header {
     border-bottom: 1px solid gray;
 }
 
-section{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    height: 100%;
+section {
+    display: flex;
+    flex-direction: row;
+    overflow: auto;
 }
-
 
 nav>img {
     width: 60%;
@@ -96,8 +106,6 @@ li:last-child {
     width: 100%;
 }
 
-
-
 .name {
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 1.5em;
@@ -129,91 +137,40 @@ li:last-child {
     padding: 1em 1em;
 }
 
-.contact{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.section{
     height: 100%;
-
-}
-.name-input{
-    margin-top: 3em;
-    width: 70%;
-    height: 5vh;
-    border-radius: 30px;
-}
-.email{
-    margin-top: 3em;
-    width: 70%;
-    height: 5vh;
-    border-radius: 30px;
-}
-.subject{
-    margin-top: 3em;
-    width: 70%;
-    height: 5vh;
-    border-radius: 30px;
-}
-.message{
-    margin-top: 3em;
-    width: 70%;
-    height: 40vh;
-    border: 1px solid #FFFFFF;
-    border-radius: 30px;
-
-}
-.message>textarea {
     width: 100%;
-    height: 100%;
-    resize: vertical;
-    border: 1px solid #000000;
-}
 
-button {
-    margin-top: 3em;
-    background: transparent linear-gradient(180deg, #3D8EF3 0%, #2251B9 100%) 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000029;
-    border-radius: 19px;
+}
+.items-area{
     width: 50%;
-    border: none;
-    color: white;
-    line-height: 2.5em;
-}
-
-.address-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     height: 100%;
+    overflow: auto;
+}
+.add-item{
+    margin: 1em;
 }
 
-.address{
+form{
     height: 50%;
-}
-.author-box{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 50%;
+    justify-content: center;
+    align-items: center;
 }
 
-.author{
+#destriction{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 90%;
-    height: 60%;
-    background-color: #3D8EF3;
 }
-.author>img{
-    border-radius: 30%;
-    margin: 0.5em;
-     width: 40%;
-     height: 95%;
-    object-fit: cover;
- }
+
+#p-name{
+    padding-inline-start: 2em;
+}
+
+#p-amount{
+    padding-inline-start: 7em;
+}
 
 @media only screen and (max-device-width: 360px) {
 
@@ -244,14 +201,14 @@ button {
         padding: 1em 1em;
     }
 
-    section{
-        display: flex;
-        flex-direction: column;
-
+    .items-area{
+        width: 100%;
     }
-    .author-box{
-        margin-top: 1em;
-        height: 90%;
+
+    form{
+        height: 50%;
     }
 
 }
+
+
