--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -79,7 +79,6 @@ li i {
     color: #FFFFFF;
     padding: 0.2rem;
     width: 60%;
-
 }
 
 ul {
@@ -254,6 +253,51 @@ li:last-child {
 .addSelect{
     width: 30%;
     margin-left: 30%;
+}
+
+@media only screen and (max-device-width: 360px) {
+
+    a {
+        text-decoration: none;
+        display: inline-block;
+        line-height: 1.5em;
+    }
+
+    li i {
+        font-size: 1.2em;
+        width: 1.2em;
+    }
+
+    .button {
+        margin-left: 0.5em;
+        width: 50%;
+    }
+    .name {
+        width: 15%;
+    }
+
+    .log-out {
+        width: 15%;
+    }
+
+    .log-out>i {
+        padding: 1em 1em;
+    }
+
+    .item{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        padding: 1em;
+    }
+
+    #choose-select{
+        width: 90%;
+        height: 2em;
+        display: flex;
+        margin-top: 2em;
+        margin-left: 1em;
+    }
 }
 
 
