--- a/public/css/style-welcome.css
+++ b/public/css/style-welcome.css
@@ -83,12 +83,14 @@ section{
     flex-direction: row;
 }
 .div-opis{
+    width: 50%;
     text-align: center;
     padding-left: 3em;
 }
 .div-opis> p{
     font-size: 1.5em;
 }
+
 
 p#witaj{
     padding-top: 5em;
@@ -101,4 +103,35 @@ p#zapraszam{
 
     text-align: center;
     font-size: 2em;
+}
+#image-welcome{
+    padding: 2em;
+    width: 50%;
+}
+#image-welcome>img{
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media only screen and (max-device-width: 360px) {
+    section{
+        flex-direction: column;
+    }
+
+    .div-opis{
+        width: 100%;
+        text-align: center;
+        padding-left: 2em;
+    }
+    #image-welcome{
+        padding: 2em;
+        width: 90%;
+    }
+    #image-welcome>img{
+
+        width: 90%;
+        height: 90%;
+    }
 }
